[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/select.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Rubik-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.210938, 0.210938, 0.210938, 1, 0.211765, 0.211765, 0.211765, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 1

[node name="Gameselect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.63654
margin_top = -1.36038
margin_right = -3.63654
margin_bottom = -1.36035
script = ExtResource( 1 )

[node name="lobbies" type="ItemList" parent="."]
margin_left = 293.333
margin_top = 14.0
margin_right = 1003.33
margin_bottom = 577.0

[node name="back" type="Button" parent="."]
margin_left = 11.0
margin_top = 543.0
margin_right = 100.0
margin_bottom = 587.0
text = "Back"

[node name="join" type="Button" parent="."]
margin_left = 27.1282
margin_top = 112.994
margin_right = 253.128
margin_bottom = 210.993
text = "Join"

[node name="create" type="Button" parent="."]
margin_left = 27.331
margin_top = 223.236
margin_right = 253.33
margin_bottom = 321.236
text = "Create"

[node name="gametype" type="RichTextLabel" parent="."]
margin_left = 34.9474
margin_top = 20.1053
margin_right = 257.947
margin_bottom = 60.1053
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true

[node name="CreateDialog" type="Control" parent="."]
visible = false
margin_left = 3.63654
margin_top = 1.36038
margin_right = 43.6365
margin_bottom = 41.3604

[node name="Sprite" type="Sprite" parent="CreateDialog"]
position = Vector2( 533.429, 182.858 )
scale = Vector2( 234.684, 119.947 )
texture = SubResource( 3 )

[node name="LineEdit" type="LineEdit" parent="CreateDialog"]
margin_left = 436.813
margin_top = 155.002
margin_right = 630.813
margin_bottom = 179.002

[node name="Button" type="Button" parent="CreateDialog"]
margin_left = 496.501
margin_top = 196.333
margin_right = 574.501
margin_bottom = 224.333
text = "Create"
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="CreateDialog/Button" to="." method="_on_Button_pressed"]
